--- a/nrw/geonetwork/catalog/views/default/templates/recordView/type-dataset.html
+++ b/nrw/geonetwork/catalog/views/default/templates/recordView/type-dataset.html
@@ -150,7 +150,7 @@
 
   <div class="row">
     <!-- contact information -->
-    <div class="col-md-8 gn-record gn-break">
+    <div class="col-md-8 col-xs-12 gn-record gn-break">
       <div ng-include="'../../catalog/views/default/templates/recordView/contact.html'" />
     </div>
 
