add custom button to switch between English and Welsh portals to replace the current static page set-up. Fixes accessibility issue in SUPPORT-20205/NRW bug ref 169596

--- a/nrw/geonetwork/catalog/components/elasticsearch/directives/partials/facet.html
+++ b/nrw/geonetwork/catalog/components/elasticsearch/directives/partials/facet.html
@@ -22,7 +22,7 @@
       >
         <!-- Change element types to input and label to improve accessibility -->
         <div>
-            <input type="checkbox" id="facet-checkbox-{{::ctrl.item.guid}}" style="display: none;">
+            <input type="checkbox" id="facet-checkbox-{{::ctrl.item.guid}}" style="display: none;" aria-hidden="true">
             <label for="facet-checkbox-{{::ctrl.item.guid}}" style="margin-bottom: -5px;">
               <span
                 class="fa fa-fw"
