--- a/nrw/geonetwork/catalog/components/search/resultsview/partials/viewtemplates/grid.html
+++ b/nrw/geonetwork/catalog/components/search/resultsview/partials/viewtemplates/grid.html
@@ -9,7 +9,8 @@
         class="panel-heading gn-card-heading"
         data-ng-class="{'gn-record-selected': md.selected}"
       >
-        <div class="gn-md-title">
+        <!-- add class clamp-2 to limit the div to 2 lines only -->
+        <div class="gn-md-title clamp-2">
           <div class="gn-md-select" data-ng-if="showBatchDropdown">
             <input
               data-gn-selection-md="md"
@@ -25,17 +26,19 @@
             title="{{md.resourceType[0] | translate}}"
           ></span>
           <h1>
+            <!-- add class clamp-2 to limit the title to 2 lines only to prevent overflowing -->
             <a
               href=""
               gn-metadata-open="md"
               gn-records="searchResults.records"
               gn-formatter="formatter.defaultUrl"
               title="{{md.resourceTitle}}"
-              class="gn-break"
+              class="gn-break clamp-2"
             >
                 <!-- Removed "missing title" from the icon text to improve accessibility -->
+                <!-- reduced the length of the title to prevent overflowing -->
                 <i data-ng-show="md.resourceTitle.trim()=='' || md.resourceTitle===undefined"></i>
-                {{(md.resourceTitle) | characters:80}}
+                {{(md.resourceTitle) | characters:75}}
             </a>
           </h1>
         </div>
@@ -66,7 +69,8 @@
           <div class="gn-md-details">
             <div class="gn-md-abstract text-muted">
               <div class="ellipsis">
-                <p>{{md.resourceAbstract.split('\n')[0] | striptags}}</p>
+                <!-- limited the abstract to display the first 200 characters only to prevent some of the overflowing -->
+                <p>{{md.resourceAbstract.split('\n')[0] | striptags | characters:200}}</p>
               </div>
             </div>
           </div>
