remove padding at the bottom of the homepage and increased the size of the filter facet cards. FIxes accessibility issue in SUPPORT-20203/NRW bug ref 169595

--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -429,3 +429,8 @@ span.gn-user-name.ng-binding :hover {
         transform: translateX(-45%);
     }
 }
+
+// removed padding for NRW
+.gn-search-page {
+    padding-bottom: 0px;
+}
