--- a/nrw/geonetwork/catalog/components/elasticsearch/directives/partials/facet-cards.html
+++ b/nrw/geonetwork/catalog/components/elasticsearch/directives/partials/facet-cards.html
@@ -1,9 +1,10 @@
+<!-- changed class to increase facets size to accommodate the bigger font -->
 <div
   data-ng-repeat="(k, facet) in aggregations[key].items"
   data-ng-init="facetValue = facet.value;"
   data-ng-show="facetValue"
   data-ng-class="isInspire ? ('bg-iti-' + (facet.key | facetCssClassCode: isInspire)) : ''"
-  class="col-xs-6 col-sm-4 col-md-3 col-lg-2 gn-topic"
+  class="col-xs-6 col-sm-5 col-md-4 col-lg-3 gn-topic"
 >
   <div
     class="panel panel-default gn-facet-{{::facetValue}} gn-facet-type-{{::decorator.type}}"
