reduce font size for map attribution on search page

--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -434,3 +434,8 @@ span.gn-user-name.ng-binding :hover {
 .gn-search-page {
     padding-bottom: 0px;
 }
+
+// adjust the font size of the map attribution text on the search page
+.ol-attribution > ul > li > a {
+    font-size: 8pt !important;
+}
