change role for sign-in dropdown. FIxes accessibility issue in SUPPORT-20258/NRW bug ref 169651

--- a/nrw/geonetwork/catalog/components/toolbar/partials/menu-signin.html
+++ b/nrw/geonetwork/catalog/components/toolbar/partials/menu-signin.html
@@ -70,10 +70,11 @@
     </ul>
   </li>
   <!-- Add role attribute for accessibility purposes -->
+  <!-- TEST -->
   <li
     class="open signin-dropdown"
     data-ng-if="!authenticated && service !== 'catalog.signin' && service !== 'new.account' && isShowLoginAsLink"
-    role="menuitem"
+    role="navigation"
   >
     <a
       href="{{signInFormAction}}?_csrf={{csrf}}&redirectUrl={{redirectUrlAfterSign}}"
