include additional thesauri names

--- a/nrw/geonetwork/catalog/views/default/templates/recordView/technical.html
+++ b/nrw/geonetwork/catalog/views/default/templates/recordView/technical.html
@@ -68,7 +68,7 @@
                  && viewConfig.internalThesaurus
                  && viewConfig.internalThesaurus.indexOf(key) !== -1)
                 || highlightedThesaurus.indexOf(key) === -1
-                && !['Integrated Public Sector Vocabulary', 'SeaDataNet Parameter Discovery Vocabulary', 'NRW SMNR Vocabulary', 'GEMET - INSPIRE themes, version 1.0'].includes(t.title)"
+                && !['Integrated Public Sector Vocabulary', 'IPSV Subjects List', 'SeaDataNet Parameter Discovery Vocabulary', 'NRW SMNR Vocabulary', 'NRW SMNR Keywords', 'GEMET - INSPIRE themes, version 1.0'].includes(t.title)"
     class="gn-margin-bottom flex-row"
   >
     <span class="badge badge-rounded">
