--- a/geonetwork/catalog/views/default/templates/recordView/metadata.html
+++ b/geonetwork/catalog/views/default/templates/recordView/metadata.html
@@ -22,20 +22,20 @@
   </div>
 
   <div
-    data-ng-init="mdLanguages = [mdView.current.record.mainLanguage].concat(mdView.current.record.otherLanguage || [])"
-    data-aang-if="mdLanguages.length > 0"
-    class="gn-margin-bottom flex-row"
-  >
-    <span class="badge badge-rounded" title="{{'language' | translate}}">
-      <i class="fa fa-fw fa-language"></i>
-    </span>
-    <div>
-      <h3 data-translate="">metadataLanguage</h3>
-      <ul class="gn-comma-list">
-        <li data-ng-repeat="l in mdLanguages">{{l | translate}}</li>
-      </ul>
-    </div>
+  data-ng-init="mdLanguages = [mdView.current.record.mainLanguage]"
+  data-ng-show="mdLanguages.length > 0"
+  class="gn-margin-bottom flex-row"
+>
+  <span class="badge badge-rounded" title="{{'language' | translate}}">
+    <i class="fa fa-fw fa-language"></i>
+  </span>
+  <div>
+    <h3 data-translate="">metadataLanguage</h3>
+    <ul class="gn-comma-list">
+      <li data-ng-repeat="l in mdLanguages">{{l | translate}}</li>
+    </ul>
   </div>
+</div>
 
   <div class="gn-margin-bottom flex-row">
     <span class="badge badge-rounded" title="{{'sourceCatalog' | translate}}">
