remove unwanted constraints from default view. Fixes SUPPORT-20174/NRW bug ref 169484

--- a/nrw/geonetwork/catalog/views/default/templates/recordView/constraints.html
+++ b/nrw/geonetwork/catalog/views/default/templates/recordView/constraints.html
@@ -1,30 +1,17 @@
-<div data-ng-if="mdView.current.record.accessConstraintsRestrictionType || mdView.current.record.accessConstraintsText || mdView.current.record.limitationsPublicAccessLink"
+<div data-ng-if="mdView.current.record.accessConstraintsText"
   class="row">
   <div>
     <h2 data-translate="">limitationsPublicAccess</h2>
-    <div data-ng-if="mdView.current.record.accessConstraintsRestrictionType">
-      <h3 data-translate="">restrictionType</h3>
-      <p data-translate="">{{mdView.current.record.accessConstraintsRestrictionType}}</p>
-    </div>
     <div data-ng-if="mdView.current.record.accessConstraintsText">
       <h3 data-translate="">accessConstraints</h3>
       <p data-translate="">{{mdView.current.record.accessConstraintsText}}</p>
     </div>
-    <div data-ng-if="mdView.current.record.limitationsPublicAccessLink">
-      <h3 data-translate="">otherConstraints</h3>
-      <a href="{{mdView.current.record.limitationsPublicAccessLink}}" target="_blank" data-translate="">{{mdView.current.record.limitationsPublicAccessLinkText}}</a>
-    </div>
   </div>
 </div>
 
-<div data-ng-if="mdView.current.record.useConstraintsType || mdView.current.record.useConstraintsText || mdView.current.record.attributionStatement"
+<div data-ng-if="mdView.current.record.useConstraintsText || mdView.current.record.attributionStatement"
   class="row">
   <h2 data-translate="">useConstraints</h2>
-  <div>
-    <div data-ng-if="mdView.current.record.useConstraintsType">
-      <h3 data-translate="">useConstraintsType</h3>
-      <p data-translate="">{{mdView.current.record.useConstraintsType}}</p>
-    </div>
     <div data-ng-if="mdView.current.record.useConstraintsText">
       <h3 data-translate="">otherConstraints</h3>
       <p data-translate="">{{mdView.current.record.useConstraintsText}}</p>
