increase logo size. Fixes SUPPORT-20896

--- a/geonetwork/catalog/views/default/less/gn_search_default.less
+++ b/geonetwork/catalog/views/default/less/gn_search_default.less
@@ -73,7 +73,9 @@ a {
 }
 .gn-source-logo {
   max-width: 100%;
-  max-height: 60px;
+  // removed height restriction for NRW
+  // to increase logo size to satisfy brand standards (see SUPPORT-20896)
+  // max-height: 60px;
 }
 
 .gn-md-view .gn-md-side .gn-providedby-logo img {
